# repomedic

./: .gitignore  .pre-commit-hooks.yaml  .repomedic.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  PLAN.md
editors/vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  files.ts  report.ts  runner.ts
editors/vscode/test/: files.test.js  report.test.js  runner.test.js
src/repomedic/: __init__.py  cli.py  mcp_server.py  models.py  models_commands.py
src/repomedic/analyzers/: __init__.py  base.py  config.py  dependencies.py  git.py  golang.py  hygiene.py  javascript.py  logs.py  runtime.py  rust.py  security.py  semgrep.py  shell.py  static.py
src/repomedic/commands/: __init__.py  agents.py  doctor.py  explain.py  fix.py  menu.py  selfcheck.py
src/repomedic/core/: baseline.py  config.py  context.py  fingerprint.py  languages.py  postprocess.py  scanner.py  service.py  suppress.py
src/repomedic/data/: AGENTS.md
src/repomedic/data/selfcheck/: manifest.json
src/repomedic/data/selfcheck/project/: LICENSE  README.md  invalid.json
src/repomedic/debug/: __init__.py  dap.py  session.py
src/repomedic/output/: json_output.py  markdown_output.py  rich_output.py  sanitize.py  sarif_output.py
src/repomedic/utils/: fs.py  process.py  redact.py  vcs.py
tests/: cli_runner.py  conftest.py  test_baseline.py  test_cli.py  test_cli_debug.py  test_config.py  test_dap_client.py  test_debug_session.py  test_dependencies.py  test_docs_sync.py  test_doctor.py  test_explain.py  test_fingerprint.py  test_fix.py  test_fs.py  test_git.py  test_golang.py  test_hygiene.py  test_javascript.py  test_languages.py  test_logs.py  test_markdown_output.py  test_mcp_server.py  test_menu.py  test_process.py  test_project_config.py  test_rich_output.py  test_runtime.py  test_rust.py  test_sanitize.py  test_sarif.py  test_scanner.py  test_schema_command.py  test_security.py  test_selfcheck.py  test_semgrep.py  test_service.py  test_shell.py  test_static.py  test_suppress.py  (+1 more)
tests/adversarial/: __init__.py  payloads.py  test_debug_locals.py  test_filesystem_boundaries.py  test_output_redaction.py  test_process_statuses.py  test_report_injection.py
tests/contract/: __init__.py  conftest.py  test_exit_codes.py  test_fingerprint_v2.py  test_report_schema.py  test_stdout_purity.py
tests/contract/fixtures/projects/broken/: README.md  settings.json
tests/contract/fixtures/projects/clean/: LICENSE  README.md
tests/contract/fixtures/projects/doctor_unhealthy/: README.md  app.py
tests/contract/fixtures/projects/fingerprints/: keys.py
tests/contract/fixtures/scripts/: failure.py  success.py
tests/contract/snapshots/: report.schema.json
tests/fixtures/bad_config/: pyproject.toml
tests/fixtures/broken_deps/: requirements.txt
tests/fixtures/broken_imports/: bad_syntax.py  missing_import.py
tests/fixtures/merge_conflicts/: conflict.py
tests/vv/: __init__.py  test_corpus.py  test_scorer.py
vv/: __init__.py  scorer.py  thresholds.yaml
vv/corpus/clean-project/: expected.yaml
vv/corpus/clean-project/project/: README.md  app.py
vv/corpus/config-invalid-json/: expected.yaml
vv/corpus/config-invalid-json/project/: README.md
vv/corpus/dependencies-missing-venv/: expected.yaml
vv/corpus/dependencies-missing-venv/project/: pyproject.toml
vv/corpus/git-merge-conflict/: expected.yaml
vv/corpus/git-merge-conflict/project/: conflict.py
vv/corpus/go-vet-format/: expected.yaml
vv/corpus/go-vet-format/project/: go.mod  main.go
vv/corpus/hygiene-todo-density/: expected.yaml
vv/corpus/hygiene-todo-density/project/: app.py
vv/corpus/javascript-syntax-error/: expected.yaml
vv/corpus/javascript-syntax-error/project/: broken.js
vv/corpus/logs-error-line/: expected.yaml
vv/corpus/runtime-python-value-error/: expected.yaml
vv/corpus/runtime-python-value-error/project/: crash.py
vv/corpus/rust-compile-error/: expected.yaml
vv/corpus/rust-compile-error/project/: Cargo.toml
vv/corpus/security-aws-example-key/: expected.yaml
vv/corpus/security-gitleaks-gitlab-example/: expected.yaml
vv/corpus/security-gitleaks-gitlab-example/project/: .gitleaks.toml  settings.py
vv/corpus/semgrep-eval/: expected.yaml
vv/corpus/shell-unquoted-expansion/: expected.yaml
vv/corpus/shell-unquoted-expansion/project/: check.sh
vv/corpus/static-bandit-shell-true/: expected.yaml
vv/corpus/static-unused-import/: expected.yaml
(+2 files in other folders)
