[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repomedic"
version = "0.4.0"
description = "Agent-first repo bug sniffer — diagnose issues in folders and repos, hand the fixes to a coding agent"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "debugpy>=1.8.21,<2",
]
# Optional analysis tools that unlock deeper findings
tools = [
    "semgrep>=1.0",
    "bandit>=1.7",
]
# MCP server for agent harnesses (`repomedic mcp`)
mcp = [
    "mcp>=1.2",
]
# Headless Python debugger capture (`repomedic debug` in Phase 2)
debug = [
    "debugpy>=1.8.21,<2",
]

[project.scripts]
repomedic = "repomedic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repomedic"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
